# Protium

./: .gitignore  LICENSE  README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/core/: blocklist.ts  cleanup.ts  compat.ts  compatwrite.ts  configwrite.ts  geproton.test.ts  geproton.ts  libraryfolders.ts  localconfig.ts  manifest.ts  paths.ts  ports.ts  protondb.test.ts  protondb.ts  scan.test.ts  scan.ts  shortcuts.ts  types.ts  units.test.ts  vdf.ts  vdfpatch.ts
src/core/adapters/: tauri.ts
src/ui/: App.vue  a11y.ts  filter.ts  fonts.css  format.ts  tokens.css
src/ui/components/: ConfirmDialog.vue  FilterBar.vue  GameCard.vue  GameDetailDrawer.vue  ProtiumLogo.vue  TierBadge.vue
src/ui/stores/: cleanupStore.ts  configStore.ts  libraryStore.ts  protonStore.ts  scanStore.ts  uiStore.ts
src/ui/views/: CleanupView.vue  LibraryView.vue  ProtonManagerView.vue
tests/core/: cleanup.test.ts  compatwrite.test.ts  configwrite.test.ts  geproton.test.ts  localconfig.test.ts  protondb.test.ts  scan.test.ts  shortcuts.test.ts  units.test.ts  vdfpatch.test.ts
tests/support/: fakeSteam.ts
tests/ui/: cleanupStore.test.ts  configStore.test.ts  filter.test.ts
