[package]
name = "protium"
version = "0.0.0"
description = "steam/proton library manager"
edition = "2021"
rust-version = "1.77"

[lib]
name = "protium_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
# phase 3: download (stream + sha512) + tarball-extraktion
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tokio = { version = "1", features = ["fs", "io-util", "rt"] }
